add: global scrolling behaviour

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -16,6 +16,11 @@
   }
 }
 
+html {
+  scroll-behavior: auto;
+  scroll-padding-top: 6rem;
+}
+
 body {
   color: rgb(var(--foreground-rgb));
   background: linear-gradient(
